# DNC-Portal

./: .gitignore  DEPLOY_RENDER.md  Makefile  README.md  check_database_issues.py  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  provider_test_summary.py  render.yaml  render.yaml.complete  start_dev.sh  test_all_providers_final.py  test_env_vars.py  test_final.py  test_provider_endpoints.py  test_with_explicit_creds.py
backend/: .deploy-trigger  .env  .env.supabase  Dockerfile  FREEDNC_API_README.md  README.md  alembic.ini  do_not_call.db  migrate.sh  pyproject.toml  seed_data.py  server.py  startup.sh  test_contacts.csv  test_contacts_dnc.csv  test_dnc_logic.csv
backend/alembic/: env.py
backend/alembic/versions/: add_dnc_sync_tables.py  add_search_history_table.py  apply_raw_sql_001_dnc_schema_hardening.py  apply_raw_sql_002_dnc_events_and_views.py  apply_raw_sql_003_dnc_workflow_functions.py  optimize_dnc_history_indexes.py
backend/app/: __init__.py  main.py
backend/do_not_call/: cli.py  config.py  main.py
backend/do_not_call/api/v1/: consent.py  crm_integrations.py  cron.py  dnc_processor.py  dnc_sync.py  free_dnc_api.py  phone_numbers.py  reports.py  search_history.py  tenants.py
backend/do_not_call/core/: auth.py  cookie_fetcher.py  database.py  dnc_service.py  dnc_standard.py  graph.py  logging_middleware.py  models.py  propagation.py  rate_limit.py  retriever.py  tps_api.py  tps_database.py  types.py  utils.py
backend/scripts/: allow_skipped_status.py  e2e_dnc_flow.py  fix_functions.py  run_all_dnc_tests.py  wipe_dnc_data.py
backend/sql/migrations/: 001_dnc_schema_hardening.sql  002_dnc_events_and_views.sql  003_dnc_workflow_functions.sql
backend/uploads/: contacts_DNC_checked_20250903_162848_577e2c43.csv  contacts_DNC_checked_20250903_163048_ee4bca44.csv  contacts_DNC_checked_20250903_173749_bba89658.csv  contacts_DNC_checked_20250903_180007_82563b3c.csv  contacts_DNC_checked_20250903_180024_d4749575.csv  contacts_DNC_checked_20250903_180048_33ff0894.csv  contacts_DNC_checked_20250905_095821_7ad4ae0f.csv
frontend/: .env  (+6 more)
(+61 files in other folders)
